--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -3,7 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment-01</title>
+    <title>Assignment 1</title>
+    <link rel="stylesheet" href="./assignment.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <nav>
+        <div class="logo">Webflow</div>
+        <button class="signup_button">Sign up</button>
+      </nav>
+      <header class="hero_content">
+        <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+        <button class="stayfoucused_button">Stay focused</button>
+      </header>
+    </div>
+
+    <section class="seeitinaction">
+      <div class="content">
+        <div class="action">
+          <h2>See it in action</h2>
+          <p>
+            Explore the live preview and imagine your brand in this bold new
+            look.
+          </p>
+          <button class="launchpreview">Launch Live Preview</button>
+        </div>
+        <div class="actionimage">
+          <img src="./assets/wc-mini.png" alt="Webflow Conf 2022" />
+        </div>
+      </div>
+    </section>
+
+    <section class="user">
+      <div class="container">
+        <h2 class="heading">Joined Thousands of Productive Users</h2>
+        <div class="boxwrap">
+          <div class="box">
+            <p class="number">50K</p>
+            <p class="label">Active Users</p>
+          </div>
+          <div class="box">
+            <p class="number">2M+</p>
+            <p class="label">Focus Sessions</p>
+          </div>
+          <div class="box">
+            <p class="number">95%</p>
+            <p class="label">Satisfaction Rate</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
