--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -53,5 +53,87 @@
         </div>
       </div>
     </section>
+    <section class="review">
+      <div class="review_contain">
+        <h2 class="review_heading">What our users say</h2>
+        <div class="review_cards_wrap">
+          <div class="review_card">
+            <div class="stars">
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+            </div>
+            <h3>Loved by Designers</h3>
+            <p class="review_texts">
+              “Our clients noticed the difference immediately. Highly
+              recommended!”
+            </p>
+            <div class="reviewers_info">
+              <img
+                src="./assets/avatar.png"
+                alt="Reviewer Avatar"
+                class="reviewer_avatar"
+              />
+              <div class="reviewer_details">
+                <span class="reviewer_name">Lucy</span>
+                <span class="reviewer_date">05/07/2025</span>
+              </div>
+            </div>
+          </div>
+          <div class="review_card">
+            <div class="stars">
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+            </div>
+            <h3>Loved by Developers</h3>
+            <p class="review_texts">
+              “This template gave our website an instant facelift — love the
+              clean design!”
+            </p>
+            <div class="reviewers_info">
+              <img
+                src="./assets/avatar2.png"
+                alt="Reviewer Avatar"
+                class="reviewer_avatar"
+              />
+              <div class="reviewer_details">
+                <span class="reviewer_name">Vladimir</span>
+                <span class="reviewer_date">10/07/2025</span>
+              </div>
+            </div>
+          </div>
+          <div class="review_card">
+            <div class="stars">
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+            </div>
+            <h3>Loved by Businessmans</h3>
+            <p class="review_texts">
+              “Makes us look like a million-dollar startup, even though we’re
+              small!”
+            </p>
+            <div class="reviewers_info">
+              <img
+                src="./assets/avatar1.png"
+                alt="Reviewer Avatar"
+                class="reviewer_avatar"
+              />
+              <div class="reviewer_details">
+                <span class="reviewer_name">Aryan</span>
+                <span class="reviewer_date">11/07/2025</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
