--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -135,5 +135,39 @@
         </div>
       </div>
     </section>
+
+    <section class="contact_section">
+      <div class="contact_wrapper">
+        <div class="contact_text">
+          <h2>Let’s Get in Touch</h2>
+        </div>
+        <form class="contact_form">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="example@email.com" />
+          <label for="fullName">Name</label>
+          <input type="text" id="fullName" placeholder="full name" />
+          <label for="message">Message</label>
+          <textarea
+            id="message"
+            placeholder="write your message...."
+          ></textarea>
+          <button type="submit">Get in Touch</button>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <h2 class="footer_logo">Webflow</h2>
+      <p class="footer_desc">
+        Ready to elevate your online presence? Contact us today to discuss your
+        project and discover how we can bring your vision to life.
+      </p>
+      <ul class="footer_links">
+        <li>Home</li>
+        <li>About</li>
+        <li>How it Works</li>
+        <li>Services</li>
+      </ul>
+    </footer>
   </body>
 </html>
