--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 1</title>
-    <link rel="stylesheet" href="./assignment.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="hero">
@@ -29,7 +29,7 @@
           <button class="launchpreview">Launch Live Preview</button>
         </div>
         <div class="actionimage">
-          <img src="./assets/wc-mini.png" alt="Webflow Conf 2022" />
+          <img src="./Assets/wc-mini.png" alt="Webflow Conf 2022" />
         </div>
       </div>
     </section>
@@ -53,17 +53,18 @@
         </div>
       </div>
     </section>
+
     <section class="review">
       <div class="review_contain">
         <h2 class="review_heading">What our users say</h2>
         <div class="review_cards_wrap">
           <div class="review_card">
             <div class="stars">
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
             </div>
             <h3>Loved by Designers</h3>
             <p class="review_texts">
@@ -72,7 +73,7 @@
             </p>
             <div class="reviewers_info">
               <img
-                src="./assets/avatar.png"
+                src="./Assets/avatar.png"
                 alt="Reviewer Avatar"
                 class="reviewer_avatar"
               />
@@ -84,11 +85,11 @@
           </div>
           <div class="review_card">
             <div class="stars">
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
             </div>
             <h3>Loved by Developers</h3>
             <p class="review_texts">
@@ -97,7 +98,7 @@
             </p>
             <div class="reviewers_info">
               <img
-                src="./assets/avatar2.png"
+                src="./Assets/avatar2.png"
                 alt="Reviewer Avatar"
                 class="reviewer_avatar"
               />
@@ -109,11 +110,11 @@
           </div>
           <div class="review_card">
             <div class="stars">
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
-              <img src="./assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
+              <img src="./Assets/icon-star.png" alt="Star" class="star-icon" />
             </div>
             <h3>Loved by Businessmans</h3>
             <p class="review_texts">
@@ -122,7 +123,7 @@
             </p>
             <div class="reviewers_info">
               <img
-                src="./assets/avatar1.png"
+                src="./Assets/avatar1.png"
                 alt="Reviewer Avatar"
                 class="reviewer_avatar"
               />
